fix(privacy): forty findings from the slice-1 review, one of them a crash I introduced
An adversarial review of the whole slice — six lenses, every finding needing an
independent skeptic AND an independent reproducer. Forty survived, clustering
into these.

THE CRASH. Artifact's compact constructor used Map.copyOf, which rejects a null
VALUE — and a tool call carrying one is ordinary: every provider keeps a JSON
null as a null map entry, and a local model routinely emits "cc": null for an
unset optional. The old StepResult never copied, so this record introduced a
failure that fired AFTER the tool had run. Tomorrow that meant: the email goes
out, then the task dies with "Internal error" and an empty trajectory, the run
is recorded failed and the owner is told it did not finish. A null on the digest
call instead meant no email at all. Null-tolerant copy now.

THE HANG. scrub() restarted its search from zero after each replacement, so a
vault value that is a substring of its own «vault:KEY» marker rewrote itself for
ever, holding the task's only worker thread. It scans forward now.

THE DOOR'S OWN GUARANTEE. The canary checked one hit per part and moved on. An
ALLOWED first hit therefore ended the scan: a private confirmation that opens
with the public digest it just sent was cleared on that window, and the address,
host and message id after it — the part that is actually private — went
unchecked. Every hit in every part is checked now, with PrivateIndex.firstHitIn
gaining an offset.

FOUR FALSE REFUSALS, each of which would have ended a scheduled run
PRIVACY_BLOCKED after the side effect had happened:
- The descriptor quoted its own output. "credentials: SMTP_PASS, SMTP_USER" is
  also how the skill harness words a vault miss, so the descriptor carried a
  40-character run of the result it was describing. It says the count now, and
  field names are capped below the window.
- What the CLOUD wrote was not among the allowed sources, though the renderer
  replays its to